fix p tag to div tag

--- a/lorem_sample/lorem_app/templates/index.html
+++ b/lorem_sample/lorem_app/templates/index.html
@@ -9,15 +9,15 @@
   <h1>Lorem Ipusm Django</h1>
 
   <h2>Example 1: Default Usage</h2>
-  <p>{% lorem %}</p>
+  <div>{% lorem %}</div>
 
   <h2>Example 2: 5 Words</h2>
-  <p>{% lorem 5 w %}</p>
+  <div>{% lorem 5 w %}</div>
 
   <h2>Example 3: 2 Random Paragraphs</h2>
-  <p>{% lorem 2 p random %}</p>
+  <div>{% lorem 2 p random %}</div>
 
   <h2>Example 4: Fixed Text</h2>
-  <p>{% lorem 2 b %}</p>
+  <div>{% lorem 2 b %}</div>
 </body>
 </html>
